# sel4-userspace

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  TODO.md  build.sh  doc.sh  rust-toolchain.toml  settings.cmake  simulate.sh  test.sh
benches/: buddy_allocator.rs  lib.rs
doc/: architecture.tex  live_update.tex  main.tex  principles.tex  protection_domain.tex  refs.bib  reincarnation_server.tex
kernel/: CONTRIBUTORS.md
kernel/libsel4/include/sel4/: functions.h
kernel/libsel4/src/: sel4_bootinfo.c
kernel/tools/hardware/outputs/: compat_strings.py
literature/: capops.h  cspacepath_t.h
src/: constructors.c  lib.rs  panic_handler.rs  sel4_kernel.rs  start.rs
src/kernel/: attributes.rs  boot_info.rs  cap_rights.rs  error.rs  message_info.rs  mod.rs  page_rights.rs  untyped_desc.rs  user_context.rs
src/kernel/sys/: boot_info.rs  constants.rs  ipc_buffer.rs  message_info.rs  mod.rs  putchar.rs  riscv_page.rs  riscv_page_table.rs  slot_region.rs  syscall.rs  types.rs  untypeddesc.rs
tools/cmake-tool/: base.cmake
tools/cmake-tool/helpers/: simulation.cmake
tools/cmake-tool/simulate_scripts/: simulate.py
tools/sel4runtime/src/: env.c  start.c
userspace/: Cargo.toml
userspace/src/: lib.rs
userspace/src/runtime/: mod.rs
userspace/src/runtime/cap_space/: cap.rs  cap_addr.rs  cap_data.rs  cap_init.rs  cap_rights.rs  cap_space_manager.rs  mod.rs
userspace/src/runtime/ipc/: endpoint.rs  message_serde.rs  mod.rs
userspace/src/runtime/kernel/: constants.rs  error.rs  ipc_buffer.rs  kernel.rs  message_info.rs  mod.rs  untyped_desc.rs  user_context.rs
userspace/src/runtime/lib/: array.rs  array_string.rs  mod.rs  mutex.rs  utils.rs
userspace/src/runtime/protection_domain/: mod.rs  protection_domain.rs
userspace/src/runtime/va_space/: page_rights.rs  va_space_manager.rs
userspace/src/servers/: mod.rs
userspace/src/servers/dummy_server/: dummy_server.rs  mod.rs
userspace/src/servers/pd_manager/: mod.rs  pd_manager.rs
userspace/src/servers/reincarnation_server/: create_dummy_server.rs  create_endpoint.rs  create_pd.rs  mod.rs  reincarnation_server.rs
userspace/src/servers/root_server/: create_pd.rs  create_reincarnation_server.rs  mod.rs  root_server.rs  untyped_memory_manager.rs
userspace/src/servers/untyped_server/: mod.rs  untyped_manager.rs  untyped_server.rs
userspace/tests/: lib.rs
userspace/tests/runtime/: dummy_kernel.rs  mod.rs  va_space_manager.rs
userspace/tests/runtime/cap_space/: cap_addr.rs  cap_data.rs  cap_rights.rs  cap_space_manager.rs  mod.rs
userspace/tests/runtime/kernel/: ipc_buffer.rs  mod.rs  (+1 more)
userspace/tests/servers/: mod.rs
(+53 files in other folders)
