[package]
name = "sel4_userspace"
version = "0.0.1"
authors = ["Matthias Eiholzer <matthias.eiholzer@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"

[lib]
name = "sel4_userspace"
crate-type = ["staticlib", "rlib"] 

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# [workspace]
# members = [
#    "./userspace/"
# ]

[dependencies.sel4_us]
path = "./userspace"